# fat12_extracter

./: BootSector.hpp  CMakeLists.txt  Directory.cpp  Directory.hpp  Disk.cpp  Disk.hpp  FAT.hpp  FAT12Entry.hpp  FIle.cpp  File.hpp  README.md  extract.cpp  list.cpp  main.cpp  utils.hpp
